--- a/assets/css/custom1.css
+++ b/assets/css/custom1.css
@@ -1,3 +1,5 @@
+
+
 .logo {
     display: block;
     margin-left: auto;
@@ -6,7 +8,6 @@
        }
 body
        {
-        background-image: url("<?php echo base_url()?>/assets/images/breadcrumb-bg.jpg");
+        background-image: url("../assets/images/breadcrumb-bg.jpg");
         background-size: cover;
        }
-       
